# aswpp

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  conanfile.py  requirements.txt
.github/workflows/: build.yaml  code_coverage.yml
examples/: CMakeLists.txt  simple_example.cpp
include/aswpp/: class_register.h  enum_register.h  script_engine.h  script_module.h
src/: CMakeLists.txt  class_register.cpp  script_engine.cpp  script_module.cpp
tools/profiles/: linux_Rel.txt  mac_Rel.txt  win_Rel.txt
unit_tests/: CMakeLists.txt  class_register.test.cpp  enum_register.test.cpp  function_register.test.cpp  script_engine.test.cpp  script_module.test.cpp
